# dishka

./: .coveragerc  .gitignore  .mypy.ini  .pytest.ini  .pytest.toml  .readthedocs.yaml  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _typos.toml  async_example.py  example.py  fastapi_example.py  fix_686.py  funcions_example.py  main.py  make.bat  noxfile.py  pyproject.toml  requirements_dev.txt  requirements_doc.txt  serve.py  setup.py  sgconfig.yml  tox.ini  xxx.py
.config/: .mypy.ini  .pytest.ini
.github/: dependabot.yml
.github/workflows/: coverage-pr.yaml  coverage-pr.yml  frameworks-latest.yaml  frameworks-latest.yml  new-event.yaml  new-event.yml  new-issue.yml  publish.yaml  publish.yml  setup.yaml  setup.yml
docs/: alternatives.rst  concepts.rst  conf.py  contributing.rst  di.rst  di_intro.rst  errors.rst  index.rst  quickstart.rst  quickstart_example.py  quickstart_example_full.py  technical_requirements.md
docs/advanced/: collect.rst  components.rst  context.rst  generics.rst  plotter.rst  scopes.rst  testing.rst  when.rst
docs/advanced/generics_examples/: decorate.py
docs/advanced/testing/: app_before.py  fixtures.py  index.rst  test_example.py
docs/container/: index.rst
docs/en/: alternatives.rst  concepts.rst  contributing.rst  di_intro.rst  index.rst  quickstart.rst
docs/en/advanced/: generics.rst  plotter.rst  scopes.rst
docs/en/container/: index.rst
docs/en/integrations/: _websockets.rst  aiogram.rst  aiogram_dialog.rst  aiohttp.rst  arq.rst  celery.rst  click.rst  fastapi.rst  faststream.rst  flask.rst  grpcio.rst  index.rst  litestar.rst  sanic.rst  starlette.rst  taskiq.rst  telebot.rst
docs/en/provider/: alias.rst  from_context.rst  provide.rst
docs/en/requirements/: technical.rst
docs/integrations/: adding_new.rst  aiogram.rst  aiogram_dialog.rst  aiohttp.rst  arq.rst  celery.rst  click.rst  fastapi.rst  faststream.rst  flask.rst  grpcio.rst  index.rst  litestar.rst  pyramid.rst  rapidy.rst  rq.rst  sanic.rst  starlette.rst  strawberry.rst  taskiq.rst  telebot.rst  typer.rst
docs/provider/: alias.rst  decorate.rst  from_context.rst  index.rst  join_providers.rst  provide.rst  provide_all.rst
docs/quickstart/: index.rst  quickstart_example_2.py  quickstart_example_3_1.py  quickstart_example_3_2.py  quickstart_example_4.py  quickstart_example_5_1.py  quickstart_example_5_2.py  quickstart_example_6.py  quickstart_example_7.py  quickstart_example_full.py
docs/requirements/: technical.rst
docs/ru/: alternatives.rst  concepts.rst  contributing.rst  di_intro.rst  index.rst  quickstart.rst  quickstart_example.py
docs/ru/advanced/: components.rst  context.rst  generics.rst  plotter.rst  scopes.rst
docs/ru/container/: index.rst
docs/ru/integrations/: _websockets.rst  adding_new.rst  aiogram.rst  aiogram_dialog.rst  aiohttp.rst  arq.rst  celery.rst  click.rst  fastapi.rst  faststream.rst  flask.rst  grpcio.rst  index.rst  litestar.rst  sanic.rst  starlette.rst  taskiq.rst  telebot.rst
docs/ru/provider/: alias.rst  decorate.rst  from_context.rst  index.rst  provide.rst  provide_all.rst
docs/ru/requirements/: technical.rst
examples/: aiogram_bot.py  aiohttp_app.py  async_simple.py  context_val.py  fastapi_app.py  faststream_app.py  flask_app.py  litestar_app.py  ruff.toml  starlette_app.py  sync_simple.py  taskiq_app.py  telebot_bot.py
examples/arq/: app.py  run_with_settings.py  run_with_worker.py  worker.py
examples/benchmarks/: fastapi_app.py  with_dishka.py
examples/di/: classes.py  with_di.py  with_dishka.py
examples/integrations/: aiogram_bot.py  aiohttp_app.py  fastapi_app.py  faststream_app.py  flask_app.py  litestar_app.py  sanic_app.py  starlette_app.py  taskiq_app.py  telebot_bot.py
examples/integrations/arq/: app.py  run_with_settings.py  run_with_worker.py
examples/real_world/: README.md  main_bot.py  main_web.py  requirements.txt  requirements_test.txt
experiments/: test_type_hints.py
linter-rules/: pep8.yaml  type_checking.yaml
requirements/: aiogram-3140.txt  aiogram-3210.txt  aiogram-3230.txt  aiogram-330.txt  aiogram-dialog-210.txt  aiogram-dialog-latest.txt  aiogram-latest.txt  aiogram.toml  aiogram_dialog.toml  aiohttp-31215.txt  aiohttp-393.txt  aiohttp-latest.txt  aiohttp.toml  arq-0250.txt  arq-latest.txt  arq.toml  asgi.txt  blacksheep-207.txt  blacksheep-latest.txt  celery-540.txt  celery-latest.txt  celery.toml  click-817.txt  click-latest.txt  click.toml  fastapi-0092.txt  fastapi-0096.txt  fastapi-0109.txt  fastapi-latest.txt  fastapi.toml  faststream-044.txt  faststream-047.txt  faststream-050.txt  faststream-0526.txt  faststream-0529.txt  faststream-060.txt  faststream-latest.txt  faststream.toml  flask-302.txt  flask-latest.txt  (+36 more)
src/dishka/: __init__.c  __init__.py  activator_classifier.py  async_container.c  async_container.py  container.c  container.py  container_objects.c  container_objects.py  context_proxy.c  context_proxy.py  dependency_source.py  error_rendering.py  exception_base.c  exception_base.py  exceptions.c  exceptions.py  factory_compiler.py  factory_index.py  framework.py  graph_compiler.py  inject.py  new_builder.py  new_compiler.py  processed_factory_filter.py  provider.py  registry.c  registry.py  registry_builder.py  registry_filter.py  scope.py  static_evaluator.py  validation.py
tests/: sample_providers.py  test_container.py  test_privider.py  test_provider.py
tests/ast-grep/: pep8-test.yaml
tests/benchmarks/: dishka_helpers.py  helpers.py  wireup_helpers.py
tests/container/: test_cache.py  test_concurrency.py  test_decorator.py  test_dynamic.py  test_exceptions.py  test_resolve.py
tests/integrations/: common.py  conftest.py
tests/type_checking/: test_type_form.py  test_with_parents.py
tests/unit/: sample_providers.py  test_async_gather.py  test_composite.py  test_context_proxy.py  test_entities.py  test_marker.py  test_provider.py  test_quickstart_example.py  test_registry.py  test_render.py  test_type_alias_type.py  test_type_comparison.py  test_type_match.py  test_type_replace.py  type_alias_type_provider.py
(+331 files in other folders)
