[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "dishka"
version = "0.2.0"
readme = "README.md"
authors = [
    { name = "Andrey Tikhonov", email = "17@itishka.org" },
]
license = { file = "LICENSE" }
description = "Minimal DI framework"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    'exceptiongroup>=1.1.3; python_version<"3.11"',
]

[project.urls]
"Homepage" = "https://github.com/reagento/dishka"
"Bug Tracker" = "https://github.com/reagento/dishka/issues"


