[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "dishka"
version = "1.5.3"
readme = "README.md"
authors = [
    { name = "Andrey Tikhonov", email = "17@itishka.org" },
]
license = { text = "Apache-2.0" }
description = "Cute DI framework with scopes and agreeable API"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    'exceptiongroup>=1.1.3; python_version<"3.11"',
]

[project.urls]
"Source" = "https://github.com/reagento/dishka"
"Homepage" = "https://github.com/reagento/dishka"
"Documentation" = "https://dishka.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/reagento/dishka/issues"
