[build-system]
requires = [
    "setuptools==80.9.0",
    "setuptools-scm[simple]==9.2.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "dishka"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Andrey Tikhonov", email = "17@itishka.org" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Cute DI framework with scopes and agreeable API"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "exceptiongroup>=1.1.3; python_version<'3.11'",
]

[dependency-groups]
typos = ["typos==1.44.0"]
zizmor = ["zizmor==1.22.0"]
ast-grep = ["ast-grep-cli==0.41.0"]
ci = [
    "uv==0.10.7",
    "ruff==0.15.4",
    "mypy==1.19.1",
    "nox==2026.2.9",
]
dev = [
    { include-group = "ci" },
    { include-group = "typos" },
    { include-group = "zizmor" },
    { include-group = "ast-grep" },
]

[project.urls]
"Source" = "https://github.com/reagento/dishka"
"Homepage" = "https://github.com/reagento/dishka"
"Documentation" = "https://dishka.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/reagento/dishka/issues"

[tool.setuptools_scm]
version_file = "src/dishka/_version.py"
version_file_template = """\
# This file auto generated!
# DO NOT EDIT MANUALLY!

version: str = "{version}"
__version__: str = "{version}"

commit_hash: str = "{scm_version.node}"
version_timestamp: str = "{scm_version.time}"

tag: str = "{scm_version.tag}"
branch: str = "{scm_version.branch}"
commit_date: str = "{scm_version.node_date}"
commit_count_since_tag: int = {scm_version.distance}
"""